--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+alembic==1.7.7
 beautifulsoup4==4.10.0
+greenlet==1.1.2
 lxml==4.8.0
+Mako==1.2.0
+MarkupSafe==2.1.1
+psycopg-binary==3.0.10
 soupsieve==2.3.1
+SQLAlchemy==1.4.32
