--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,7 @@ lxml==4.8.0
 Mako==1.2.0
 MarkupSafe==2.1.1
 psycopg-binary==3.0.10
+psycopg2==2.9.3
+PyYAML==6.0
 soupsieve==2.3.1
 SQLAlchemy==1.4.32
