--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,11 @@ greenlet==1.1.2
 lxml==4.8.0
 Mako==1.2.0
 MarkupSafe==2.1.1
-psycopg-binary==3.0.10
+psycopg-binary==3.0.11
 psycopg2==2.9.3
 PyYAML==6.0
+shortuuid==1.0.8
+six==1.16.0
 soupsieve==2.3.1
 SQLAlchemy==1.4.32
-
-shortuuid~=1.0.8
+SQLAlchemy-Utils==0.38.2
